<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MainActivity</string>
    <string name="go_to_study">打开Study页面</string>
    <string name="close">关闭</string>
    <string name="go_back">返回</string>
    <string name="run">运行</string>
    <string name="study_add_view_by_code">用代码添加控件</string>
    <string name="study_download_file">下载文件</string>
    <string name="study_json_parse">Json 解析</string>
    <string name="study_sqlite">SQLite</string>
    <string name="go_to_demo">打开DEMO</string>
    <string name="study_gesture">手势</string>
</resources>
