<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout"
            >
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/go_back"
                android:id="@+id/GoBack"
                android:onClick="GoBackHandler"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/close"
            android:id="@+id/Close"
            android:onClick="CloseHandler"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/study_add_view_by_code"
                android:id="@+id/AddViewByCode"
                android:onClick="AddViewByCodeHandler"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/study_download_file"
                android:id="@+id/DownloadFile"
                android:onClick="DownloadFileHandler"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/study_json_parse"
                android:id="@+id/JsonParse"
                android:onClick="JsonParseHandler"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/study_sqlite"
                android:id="@+id/SQLite"
                android:onClick="SQLiteHandler"/>   </LinearLayout>
</ScrollView>